refactor: method fix + add custom exceptions